[package]
name = "hash_check"
version = "1.0.1"
description = "A simple command line tool to check the hash of a passwords."
edition = "2021"
authors = ["akash2061 <aakashsoni8781@gmail.com>"]
repository = "https://github.com/akash2061/RUST-Hash-Checker"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
colored = "2.1.0"
sha2 = "0.10.8"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.